syntax = "proto3";

import "common.proto";

package cline;
option java_package = "bot.cline.proto";
option java_multiple_files = true;

service VoiceService {
  rpc startRecording(StartRecordingRequest) returns (StartRecordingResponse);
  rpc stopRecording(StopRecordingRequest) returns (StopRecordingResponse);
  rpc getRecordingStatus(GetRecordingStatusRequest) returns (GetRecordingStatusResponse);
  rpc transcribeAudio(TranscribeAudioRequest) returns (TranscribeAudioResponse);
}

message StartRecordingRequest {
  Metadata metadata = 1;
  // Could add options later
}

message StartRecordingResponse {
  bool success = 1;
  string error = 2;
}

message StopRecordingRequest {
  Metadata metadata = 1;
}

message StopRecordingResponse {
  bool success = 1;
  string audio_base64 = 2;
  string error = 3;
}

message GetRecordingStatusRequest {
  Metadata metadata = 1;
}

message GetRecordingStatusResponse {
  bool is_recording = 1;
  double duration_seconds = 2;
  string error = 3;
}

message TranscribeAudioRequest {
  Metadata metadata = 1;
  string audio_base64 = 2;
  string language = 3; // optional language hint
}

message TranscribeAudioResponse {
  string text = 1;
  string error = 2;
}
